added webpack dev server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "thing to appreciate doctors",
   "main": "index.js",
   "scripts": {
+    "debug": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +14,8 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
