--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "thing to appreciate doctors",
   "main": "index.js",
   "scripts": {
-    "debug": "webpack-dev-server --mode development",
+    "debug": "webpack-dev-server --mode development --devtool 'source-map'",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,7 +29,6 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "jquery-backstretch": "^2.1.18",
     "popper.js": "^1.16.1"
   }
 }
