removed webpack dev server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "thing to appreciate doctors",
   "main": "index.js",
   "scripts": {
-    "debug": "webpack-dev-server --mode development --devtool 'source-map'",
+    "debug": "webpack --mode development --devtool 'source-map' --watch",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,8 +23,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
